@@ -1,3 +1,10 @@
+2008-07-14  Matthias Klose  <doko@ubuntu.com>
+
+	* acinclude.m4 (FIND_JAR): Check if $JAR supports @<file>;
+	set JAR_KNOWS_ATFILE.
+	* Makefile.am (ICEDTEA_ENV_GCJ): Pass JAR_KNOWS_ATFILE.
+	* patches/icedtea-ecj.patch: Use jar @<file> if available.
+
 2008-07-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* ChangeLog: Fix typos.
